force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>Objeto para gravar logs em caso de erros</description>
    <label>Log</label>
    <nameField>
        <label>Nome de Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>