force-app/main/default/objects/Log__c/fields/CallOrigin__c.field-meta.xml
<CustomField>
    <fullName>CallOrigin__c</fullName>
    <description>Origem da chamada (Trigger, Flow, Botão, Retry job, etc.).</description>
    <label>Call Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>