force-app/main/default/objects/Log__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>ID de correlação para rastrear ponta a ponta uma tentativa de integração VO.</description>
    <label>Correlation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>