force-app/main/default/objects/Log__c/fields/Erro_Enviado__c.field-meta.xml
<CustomField>
    <fullName>Erro_Enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica que o log representa falha relevante para alerta/report de erros.</description>
    <label>Erro Enviado</label>
    <type>Checkbox</type>
</CustomField>