force-app/main/default/objects/Log__c/fields/HoraCriacao__c.field-meta.xml
<CustomField>
    <fullName>HoraCriacao__c</fullName>
    <formula>TIMEVALUE(CreatedDate) - 10800000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hora de Criação</label>
    <type>Time</type>
</CustomField>