force-app/main/default/objects/Log__c/fields/HTTPMethod__c.field-meta.xml
<CustomField>
    <fullName>HTTPMethod__c</fullName>
    <description>API Custom - Método HTTP</description>
    <label>HTTP Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>