force-app/main/default/objects/Log__c/fields/IntegrationType__c.field-meta.xml
<CustomField>
    <fullName>IntegrationType__c</fullName>
    <description>Tipo da integração VO (ACCOUNT_SYNC, OPP_SYNC).</description>
    <label>Integration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>