force-app/main/default/objects/Log__c/fields/Lab065_LeadRelated__c.field-meta.xml
<CustomField>
    <fullName>Lab065_LeadRelated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Related</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>