force-app/main/default/objects/Log__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <description>Exceções gerais - Número da linha</description>
    <label>Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>