force-app/main/default/objects/Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Operação lógica da integração VO (ex.: sendCliente, sendPlano).</description>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>