force-app/main/default/objects/Log__c/fields/RelatedId__c.field-meta.xml
<CustomField>
    <fullName>RelatedId__c</fullName>
    <label>Related Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>